# gui

./: .gitignore
.github/agents/: gui_agent.agent.md
backend/: app.py  main_adapter.py  test_imports.py
backend/data/samples/vans/reconstruction/: sparse.ply
backend/src/calibration/calibration_results/: calibration_data.npz  calibration_data.txt
backend/src/reconstruction/: bundle_adjustment.py  image_quality.py  sfm.py
gui/: CMakeLists.txt  PythonBridge.cpp  PythonBridge.h  Viewer3DWidget.cpp  Viewer3DWidget.h  controller.cpp  controller.h  main.cpp  requirements.txt  window.cpp  window.h  window.ui
src/: __init__.py
src/calibration/: __init__.py  calibration.py  validate_calibration.py
src/reconstruction/: __init__.py  dense_triangulation.py  dual_sfm.py  point_cloud_filter.py
